gss-bid-model/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bid-model-service
  labels:
    app: bid-model
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: bid-model
